# REngine

./: CMakeLists.txt  README.md  glad.c  main.cpp
Rendering/: Camera.cpp  Camera.h  ImageLoader.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  fragmentShader.fs  fragmentShader_lightSource.fs  vertexShader.vs
